IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
6/22/13: Converted Clipmodel to PIP input, fixed point output.

6/21/13: IMOD_4-6-4
6/21/13: Fixed array not allocated big enough in Beadtrack.

6/21/12: Added an option to Blendmont to specify a value for filling blank
regions.

6/21/12: Made Xfalign support color image files, added an option to enter
sections numbered from 1.

6/21/12: Kept robust fit in Tiltalign from setting all weights for a fiducial
to at or near zero; tweaked output from Tiltalign and Alignlog.

6/20/12: IMOD_4-6-3
6/20/12: Beadtrack can now refine center positions using an edge-detecting
filter, which significantly improves accuracy for many plastic section data
sets and some cryo data sets.

6/19/12: Tiltalign can now do robust fitting, eliminating or down-weighting
points with exceptionally high residuals. 

6/9/12: In Tilt, increased the assumed limit on number of lines in a CUDA
array to 65535, the limit on Fermi cards (In 4.5).

6/6/12: In eTomo - Final Aligned Stack, fixed a bug where 
tilt_3dfind_reprojecta.com was not being created (In 4.5).(Bug# 1622)

6/5/12: Added options to Point2model to set scale and origin directly.

6/5/12: In eTomo, added code to dump the state of classes which may be
involved in an intermittently occurring bug.(Bug# 1618)

5/31/12: In eTomo, removed incorrect error messages from the _err.log
(In 4.5).(Bug# 1620)

5/31/12: In eTomo, removed extra lines that had been added onto a warning
message (In 4.5).(Bug# 1621) 

5/29/12: IMOD_4-5-3
5/26/12: Changed Tiltalign and Beadtrack to get initial x/y/z
coordinates with a direct solution instead of iteration, and added an initial
scan for correct starting tilt axis rotation angle to Tiltalign.

5/26/12: Changed -linear option to Imodfindbeads to allow use of antialias
image reduction instead of regular interpolation.

5/26/12: Made Taperoutvol and  Assemblevol preserve angles in header so they