@@ -1,5 +1,9 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+6/28/12: IMOD_4-6-5
+6/28/12: Fixed bug in beadfixer that made it skip all residuals; fixed
+undefined variable when using sobel filter in Beadtrack.
+
 6/22/13: Converted Clipmodel to PIP input, fixed point output.
 
 6/21/13: IMOD_4-6-4
